fixed while line on right side below 397px screenwidth. overflowing divs containing the accordion arrows inside the lables were overflowing. added overflow: hidden to labels and changed the arrow to one that points down at 0deg, the one before pointed left, i had to turn it 90 deg thus the div overflowing

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -205,7 +205,8 @@
         }
 
         & input:checked + .tab--label div:last-of-type {
-          transform: rotate(270deg);
+          //transform: rotate(270deg);
+          transform: rotate(180deg);
         }
 
         & label:hover {
@@ -216,6 +217,7 @@
           display        : flex;
           justify-content: space-between;
           align-content  : center;
+          overflow       : hidden;
 
           & div { // Label date and Title container
             align-content: center;
@@ -227,7 +229,7 @@
 
           & div:last-of-type{ // Selects Arrow container indicating open/closed state
             margin-left: $global-spacing;
-            transform  : rotate(90deg);
+            //transform  : rotate(90deg);
             transition : .2s all;
           }
         }
